# openpad-full

./: .gitignore  README.md  auth_calendar.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
openpad/: app.py  calendar_api.py  main.py  notes.py  system_theme.py  themes.py
openpad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
